syntax = "proto3";

package podkrepibg.campaign;

option csharp_namespace = "Podkrepibg.Campaigns";
option go_package = "campaign";

import "common/nomenclatures.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service CampaignService {

  // creates a new campaign
  rpc CreateCampaign (CreateCampaignRequest) returns (Campaign);

  // list campaigns
  rpc ListCampaigns (ListCampaignsRequest) returns (CampaignsResponse);

  rpc ListCampaignTypes (google.protobuf.Empty) returns (CampaignTypesResponse);

  rpc FilterCampaigns (FilterCampaignsRequest) returns (CampaignsResponse);
}

message CreateCampaignRequest {

	string initiator_id = 1;

	string operator_id = 2;

	string beneficiary_id = 3;

  string title = 4;
}

message CampaignTypesResponse {
	repeated CampaignType campaign_types = 1;
}

message CampaignType {

	string id = 1;

	string campaign_type_name = 2;

	string campaign_type_descr = 3;

	repeated CampaignSubType sub_types = 4;
}

message CampaignSubType {

	string id = 1;

	string campaign_sub_type_name = 2;

	string campaign_sub_type_descr = 3;
}

message FilterCampaignsRequest {

	CampaignType campaign_types = 1;

	CampaignSubType campaign_sub_type = 2;

	common.nomenclatures.CampaignState state = 3;

	string operator_id = 4;

	string initiator_id = 5;

	string beneficiary_id = 6;
}

message Campaign {

	string id = 1;

	string initiator_id = 2;

	string operator_id = 3;

	string beneficiary_id = 4;

	common.nomenclatures.CampaignState state = 5;

	CampaignType campaign_type = 6;

	CampaignSubType campaignSubTypes = 7;

	string title = 8;

	string short_description = 9;

	string full_description = 10;

	uint32 target_amount = 11;

	common.nomenclatures.CurrencyCode currency = 12;

	uint32 raised_funds = 13;

	uint32 payed_out = 14;

	repeated Donation donations = 15;
}

message Donation {
	string donor_display_name = 1;
	uint32 amount = 2;
	string message = 3;
	google.protobuf.Timestamp date = 4;
}

message ListCampaignsRequest {
}

message CampaignsResponse {
  repeated Campaign campaigns = 1;
}
